# PokerBot

./: .gitignore  AddjustedChatGTP.py  ChatGPTEval.py  ChatTesting.py  EHS.py  EHSPlayer.py  Evaluation.py  README.md  ScoreChecker.py  Test Game.py  cards.py  ehs.py  ehs_player.py  eval_player.py  gui.py  interface.py  locktesting.py  main.py  playingPoker.py  playing_poker.py  pyproject.toml  score_checker.py  threadtesting.py
