[project]
name = "pokerbot"
version = "0.2.0"
description = "GloverLab PokerBot with EHS Algorithm"
authors = [
    {name = "jmglov028@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pillow (>=12.0.0,<13.0.0)",
    "thread (>=0.1.2)",
    "numpy (>=1.26.2)",
    "typing_extensions (>=4.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
